--- a/index.html
+++ b/index.html
@@ -69,6 +69,6 @@
       </div>
     </div>
 
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
