--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link
       rel="icon"
       sizes="72x72"
-      href="/img/partly-cloudy-day.svg"
+      href="https://egesiapres.github.io/weather-app/img/partly-cloudy-day.svg"
       type="image/svg"
     />
 
@@ -89,7 +89,7 @@
               <div class="container x-center">
                 <img
                   class="m-5"
-                  src="/img/partly-cloudy-day.svg"
+                  src="https://egesiapres.github.io/weather-app/img/partly-cloudy-day.svg"
                 />
               </div>
 
@@ -149,7 +149,7 @@
                 >
                   <div class="container y-center">
                     <img
-                      src="img/thermometer-colder.svg"
+                      src="https://egesiapres.github.io/weather-app/img/thermometer-colder.svg"
                       class="icon"
                     />
 
@@ -163,7 +163,7 @@
 
                   <div class="container y-center">
                     <img
-                      src="img/thermometer-warmer.svg"
+                      src="https://egesiapres.github.io/weather-app/img/thermometer-warmer.svg"
                       class="icon"
                     />
                     <p
@@ -223,7 +223,7 @@
                   <div class="container y-center">
                     <img
                       id="wind-bft-icon"
-                      src="/img/wind.svg"
+                      src="https://egesiapres.github.io/weather-app/img/wind.svg"
                       class="small-icon mr-5"
                     />
                     <p
@@ -240,7 +240,7 @@
                   >
                     <img
                       id="gust-bft-icon"
-                      src="/img/wind.svg"
+                      src="https://egesiapres.github.io/weather-app/img/wind.svg"
                       class="small-icon mr-5"
                     />
                     <p
@@ -253,7 +253,7 @@
 
                   <div class="container y-center">
                     <img
-                      src="img/compass.svg"
+                      src="https://egesiapres.github.io/weather-app/img/compass.svg"
                       class="small-icon mr-5"
                     />
 
@@ -284,7 +284,7 @@
                 <div class="p-10">
                   <div class="container y-center">
                     <img
-                      src="img/sunrise.svg"
+                      src="https://egesiapres.github.io/weather-app/img/sunrise.svg"
                       class="small-icon mr-5"
                     />
                     <p
@@ -297,7 +297,7 @@
 
                   <div class="container y-center">
                     <img
-                      src="img/sunset.svg"
+                      src="https://egesiapres.github.io/weather-app/img/sunset.svg"
                       class="small-icon mr-5"
                     />
 
